force-app/main/default/objects/Revenue_Contract_Line__c/Revenue_Contract_Line__c.object-meta.xml
<CustomObject>
    <label>Revenue Contract Line</label>
    <nameField>
        <displayFormat>RCL-{00000}</displayFormat>
        <label>RC Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>