force-app/main/default/objects/Revenue_Contract_Line__c/fields/Above_Mid_Point__c.field-meta.xml
<CustomField>
    <fullName>Above_Mid_Point__c</fullName>
    <label>Above Mid Point %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>