force-app/main/default/objects/Revenue_Contract_Line__c/fields/Adjusted_SSP_Price__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_SSP_Price__c</fullName>
    <label>Adjusted SSP Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>