force-app/main/default/objects/Revenue_Contract_Line__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated Amount (Net Revenue)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>