force-app/main/default/objects/Revenue_Contract_Line__c/fields/Allocation_Method_From_Policy__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Method_From_Policy__c</fullName>
    <label>Allocation Method From Policy</label>
    <length>18</length>
    <type>Text</type>
</CustomField>