force-app/main/default/objects/Revenue_Contract_Line__c/fields/Allocation_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Revenue__c</fullName>
    <label>Allocation Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>