force-app/main/default/objects/Revenue_Contract_Line__c/fields/Below_Mid_Point__c.field-meta.xml
<CustomField>
    <fullName>Below_Mid_Point__c</fullName>
    <label>Below Mid Point %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>