force-app/main/default/objects/Revenue_Contract_Line__c/fields/Bg_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>Bg_Run_ID__c</fullName>
    <label>Bg Run ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>