force-app/main/default/objects/Revenue_Contract_Line__c/fields/Billing_Average_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Billing_Average_Exchange_Rate__c</fullName>
    <label>Billing Average Exchange Rate</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>