force-app/main/default/objects/Revenue_Contract_Line__c/fields/Carves_Amount__c.field-meta.xml
<CustomField>
    <fullName>Carves_Amount__c</fullName>
    <label>Carves Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>