force-app/main/default/objects/Revenue_Contract_Line__c/fields/Carves_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Carves_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carves Eligible</label>
    <type>Checkbox</type>
</CustomField>