force-app/main/default/objects/Revenue_Contract_Line__c/fields/Carves_Revenue_Segment__c.field-meta.xml
<CustomField>
    <fullName>Carves_Revenue_Segment__c</fullName>
    <label>Carves Revenue Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>