force-app/main/default/objects/Revenue_Contract_Line__c/fields/Carvs_Rev_Recog_Till_Prior_Prd__c.field-meta.xml
<CustomField>
    <fullName>Carvs_Rev_Recog_Till_Prior_Prd__c</fullName>
    <label>Carvs Rev Recog Till Prior Prd</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>