force-app/main/default/objects/Revenue_Contract_Line__c/fields/Contract_Revenue_Segment__c.field-meta.xml
<CustomField>
    <fullName>Contract_Revenue_Segment__c</fullName>
    <label>Contract Revenue Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>