force-app/main/default/objects/Revenue_Contract_Line__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <label>Created By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>