force-app/main/default/objects/Revenue_Contract_Line__c/fields/Created_Period__c.field-meta.xml
<CustomField>
    <fullName>Created_Period__c</fullName>
    <label>Created Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>