force-app/main/default/objects/Revenue_Contract_Line__c/fields/Cummulative_Carves_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cummulative_Carves_Amount__c</fullName>
    <label>Cumulative Carves</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>