force-app/main/default/objects/Revenue_Contract_Line__c/fields/Cumulative_Net_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Net_Revenue__c</fullName>
    <label>Cumulative Net Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>