force-app/main/default/objects/Revenue_Contract_Line__c/fields/Derived_AMP_Price__c.field-meta.xml
<CustomField>
    <fullName>Derived_AMP_Price__c</fullName>
    <label>Above Mid Point Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>