force-app/main/default/objects/Revenue_Contract_Line__c/fields/Derived_BMP_Price__c.field-meta.xml
<CustomField>
    <fullName>Derived_BMP_Price__c</fullName>
    <label>Below Mid Point Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>