force-app/main/default/objects/Revenue_Contract_Line__c/fields/Financial_Id__c.field-meta.xml
<CustomField>
    <fullName>Financial_Id__c</fullName>
    <label>Order Product ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>