force-app/main/default/objects/Revenue_Contract_Line__c/fields/Functional_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Functional_Currency_Code__c</fullName>
    <label>Functional Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>