force-app/main/default/objects/Revenue_Contract_Line__c/fields/Functional_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Functional_Exchange_Rate__c</fullName>
    <label>Functional Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>