force-app/main/default/objects/Revenue_Contract_Line__c/fields/Line_Term__c.field-meta.xml
<CustomField>
    <fullName>Line_Term__c</fullName>
    <label>Line Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>