force-app/main/default/objects/Revenue_Contract_Line__c/fields/Net_Rev_Recog__c.field-meta.xml
<CustomField>
    <fullName>Net_Rev_Recog__c</fullName>
    <label>Net Rev Recog</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>