force-app/main/default/objects/Revenue_Contract_Line__c/fields/op_sbqq_subscription__c.field-meta.xml
<CustomField>
    <fullName>op_sbqq_subscription__c</fullName>
    <label>Subscription Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>