force-app/main/default/objects/Revenue_Contract_Line__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>