force-app/main/default/objects/Revenue_Contract_Line__c/fields/Order_Fid_Moved__c.field-meta.xml
<CustomField>
    <fullName>Order_Fid_Moved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Fid Moved</label>
    <type>Checkbox</type>
</CustomField>