force-app/main/default/objects/Revenue_Contract_Line__c/fields/Parent_Order_Reference__c.field-meta.xml
<CustomField>
    <fullName>Parent_Order_Reference__c</fullName>
    <label>Parent Order Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>