force-app/main/default/objects/Revenue_Contract_Line__c/fields/Posted_Percent__c.field-meta.xml
<CustomField>
    <fullName>Posted_Percent__c</fullName>
    <label>Revenue Posted Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>