force-app/main/default/objects/Revenue_Contract_Line__c/fields/Prior_Recognized_Period__c.field-meta.xml
<CustomField>
    <fullName>Prior_Recognized_Period__c</fullName>
    <label>Prior Recognized Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>