force-app/main/default/objects/Revenue_Contract_Line__c/fields/Prior_Unrecognized_Period__c.field-meta.xml
<CustomField>
    <fullName>Prior_Unrecognized_Period__c</fullName>
    <label>Prior Unrecognized Period</label>
    <length>80</length>
    <type>Text</type>
</CustomField>