force-app/main/default/objects/Revenue_Contract_Line__c/fields/Prior_Version_Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Version_Allocated_Amount__c</fullName>
    <label>Prior Version Allocated Amount (Net Reve</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>