force-app/main/default/objects/Revenue_Contract_Line__c/fields/Regroup_Period__c.field-meta.xml
<CustomField>
    <fullName>Regroup_Period__c</fullName>
    <label>Regroup Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>