force-app/main/default/objects/Revenue_Contract_Line__c/fields/Regroup_To__c.field-meta.xml
<CustomField>
    <fullName>Regroup_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regroup To</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Regroup Lines</relationshipLabel>
    <relationshipName>Regrouped_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>