force-app/main/default/objects/Revenue_Contract_Line__c/fields/Regrouped_Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Regrouped_Contract_Version__c</fullName>
    <label>Regrouped Contract Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>