force-app/main/default/objects/Revenue_Contract_Line__c/fields/Regrouped_Date__c.field-meta.xml
<CustomField>
    <fullName>Regrouped_Date__c</fullName>
    <label>Regrouped Date</label>
    <type>Date</type>
</CustomField>