force-app/main/default/objects/Revenue_Contract_Line__c/fields/Relative_Percent__c.field-meta.xml
<CustomField>
    <fullName>Relative_Percent__c</fullName>
    <label>Relative Percent</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>