force-app/main/default/objects/Revenue_Contract_Line__c/fields/Release_Percent__c.field-meta.xml
<CustomField>
    <fullName>Release_Percent__c</fullName>
    <label>Release Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>