force-app/main/default/objects/Revenue_Contract_Line__c/fields/Rem_Cont_Rev_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rem_Cont_Rev_Percent__c</fullName>
    <label>Rem Cont Rev Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>