force-app/main/default/objects/Revenue_Contract_Line__c/fields/Remaining_Carves_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Carves_Revenue__c</fullName>
    <label>Remaining Carves Revenue</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>