force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_By_Billing_Ex_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_By_Billing_Ex_Rate__c</fullName>
    <formula>Net_Rev_Recog__c / IF ( OR (Billing_Average_Exchange_Rate__c != null, Billing_Average_Exchange_Rate__c != 0) , Billing_Average_Exchange_Rate__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue By Billing Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>