force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_By_Booking_Ex_Rate__c.field-meta.xml
<CustomField>
    <fullName>Revenue_By_Booking_Ex_Rate__c</fullName>
    <formula>Net_Rev_Recog__c  / IF ( OR (Functional_Exchange_Rate__c != null, Functional_Exchange_Rate__c != 0) , Functional_Exchange_Rate__c , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue By Booking Exchange Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>