force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Contract_id__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_id__c</fullName>
    <label>Revenue Contract ID</label>
    <referenceTo>Revenue_Contract__c</referenceTo>
    <relationshipLabel>Revenue Contract Lines</relationshipLabel>
    <relationshipName>Revenue_Contract_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>