force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Contract_Version__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Contract_Version__c</fullName>
    <label>Revenue Contract Version</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>