force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Distribution_Method__c</fullName>
    <label>Revenue Distribution Method</label>
    <length>80</length>
    <type>Text</type>
</CustomField>