force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Line_GUID__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Line_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Revenue Line GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>