force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Rule_Id__c</fullName>
    <label>Revenue Rule ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>