force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trigger__c</fullName>
    <label>Revenue Trigger</label>
    <length>80</length>
    <type>Text</type>
</CustomField>