force-app/main/default/objects/Revenue_Contract_Line__c/fields/Revenue_Unposted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Unposted__c</fullName>
    <label>Revenue Unposted</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>