force-app/main/default/objects/Revenue_Contract_Line__c/fields/SSP_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>SSP_Batch_Id__c</fullName>
    <label>SSP Batch ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>