force-app/main/default/objects/Revenue_Contract_Line__c/fields/SSP_Date__c.field-meta.xml
<CustomField>
    <fullName>SSP_Date__c</fullName>
    <label>SSP Date</label>
    <type>Date</type>
</CustomField>