force-app/main/default/objects/Revenue_Contract_Line__c/fields/Ssp_Percent__c.field-meta.xml
<CustomField>
    <fullName>Ssp_Percent__c</fullName>
    <label>SSP Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>