force-app/main/default/objects/Revenue_Contract_Line__c/fields/SSP_Perday_MP__c.field-meta.xml
<CustomField>
    <fullName>SSP_Perday_MP__c</fullName>
    <label>SSP Perday MP</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>