force-app/main/default/objects/Revenue_Contract_Line__c/fields/SSP_Value_Guid_Txt__c.field-meta.xml
<CustomField>
    <fullName>SSP_Value_Guid_Txt__c</fullName>
    <label>SSP Profile ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>