force-app/main/default/objects/Revenue_Contract_Line__c/fields/Ssp_Within_Range__c.field-meta.xml
<CustomField>
    <fullName>Ssp_Within_Range__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Within SSP Range</label>
    <type>Checkbox</type>
</CustomField>