force-app/main/default/objects/Revenue_Contract_Line__c/fields/Total_Billed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_Amount__c</fullName>
    <label>Total Billed Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>