force-app/main/default/objects/Revenue_Contract_Line__c/fields/Total_Revenue_Released_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Released_Percent__c</fullName>
    <label>Total Revenue Released Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>