force-app/main/default/objects/Revenue_Contract_Line__c/fields/Total_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sell_Price__c</fullName>
    <label>Total Sell Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>