force-app/main/default/objects/Revenue_Contract_Line__c/fields/Transaction_Price__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Price__c</fullName>
    <label>Transaction Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>