force-app/main/default/objects/Revenue_Contract_Line__c/fields/Transaction_Range_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Range_Identifier__c</fullName>
    <label>Transaction Range Identifier</label>
    <length>30</length>
    <type>Text</type>
</CustomField>