force-app/main/default/objects/Revenue_Contract_Line__c/fields/Trigger_No_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Trigger_No_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger No Allocation</label>
    <type>Checkbox</type>
</CustomField>