force-app/main/default/objects/Revenue_Contract_Line__c/fields/Triggered_Allocation_Method__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Allocation_Method__c</fullName>
    <label>Triggered Allocation Method</label>
    <length>18</length>
    <type>Text</type>
</CustomField>