force-app/main/default/objects/Revenue_Contract_Line__c/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <label>Updated By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>