force-app/main/default/objects/Revenue_Contract_Line__c/fields/Updated_Period__c.field-meta.xml
<CustomField>
    <fullName>Updated_Period__c</fullName>
    <label>Updated Period</label>
    <length>50</length>
    <type>Text</type>
</CustomField>