force-app/main/default/objects/Revenue_Contract_Line__c/fields/Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Uptd_By__c</fullName>
    <label>Uptd By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>