force-app/main/default/objects/Revenue_Contract_Line__c/fields/Uptd_Date__c.field-meta.xml
<CustomField>
    <fullName>Uptd_Date__c</fullName>
    <label>Uptd Date</label>
    <type>Date</type>
</CustomField>