force-app/main/default/objects/Revenue_Contract_Line__c/fields/User_Defined_Event__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Event__c</fullName>
    <label>User Defined Event</label>
    <length>50</length>
    <type>Text</type>
</CustomField>