force-app/main/default/objects/Revenue_Contract_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Revenue_Contract_id__c</columns>
    <columns>Revenue_Line_GUID__c</columns>
    <columns>Revenue_Rule_Id__c</columns>
    <columns>Order__c</columns>
    <columns>Financial_Id__c</columns>
    <columns>Product_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>