force-app/main/default/objects/Revenue_Contract_Line__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>NAME</columns>
    <columns>Revenue_Contract_id__c</columns>
    <columns>Revenue_Line_GUID__c</columns>
    <columns>Order__c</columns>
    <columns>Financial_Id__c</columns>
    <columns>Product_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Created_By__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>New</label>
</ListView>